@@ -8,7 +8,7 @@ import (
 	"github.com/elastic/beats/libbeat/beat"
 )
 
-func genSetupCmd(name, version string) *cobra.Command {
+func genSetupCmd(name, version string, beatCreator beat.Creator) *cobra.Command {
 	setup := cobra.Command{
 		Use:   "setup",
 		Short: "Setup index template and dashboards",
@@ -25,14 +25,16 @@ func genSetupCmd(name, version string) *cobra.Command {
 
 			template, _ := cmd.Flags().GetBool("template")
 			dashboards, _ := cmd.Flags().GetBool("dashboards")
+			machineLearning, _ := cmd.Flags().GetBool("machine-learning")
 
 			// No flags: setup all
-			if !template && !dashboards {
+			if !template && !dashboards && !machineLearning {
 				template = true
 				dashboards = true
+				machineLearning = true
 			}
 
-			if err = beat.Setup(template, dashboards); err != nil {
+			if err = beat.Setup(beatCreator, template, dashboards, machineLearning); err != nil {
 				os.Exit(1)
 			}
 		},
@@ -40,6 +42,7 @@ func genSetupCmd(name, version string) *cobra.Command {
 
 	setup.Flags().Bool("template", false, "Setup index template only")
 	setup.Flags().Bool("dashboards", false, "Setup dashboards only")
+	setup.Flags().Bool("machine-learning", false, "Setup machine learning job configurations only")
 
 	return &setup
 }
