@@ -14,6 +14,7 @@ services:
       - "network.host="
       - "transport.host=127.0.0.1"
       - "http.host=0.0.0.0"
+      - "xpack.security.enabled=false"
 
   logstash:
     extends:
